# Checklist-app-backend

./: .env.example  CACHE_INTEGRATION_EXAMPLES.md  README.md  README_STARTUP.md  SEED_CMS_README.md  add_more_checklist_types.py  alembic.ini  check_production_payment.py  debug_question_images.py  debug_review_api.py  enable_audit_logging_for_all_services.py  fix_admin_permissions.py  fix_admin_user.py  fix_admin_user.sh  fix_admin_user.sql  fix_all_checklist_types.py  fix_checklist_creation_logic.py  fix_checklist_types_one_liner.py  fix_payment.py  fix_payment_paid_at.py  fix_production_checklist_types.py  pyproject.toml  quick_audit_filter_test.py  quick_fix_checklist_types.py  quick_media_check.py  requirements.txt  schema.md  seed_cms.py  simple_review_test.py  start_server.py  start_server.sh  test_audit_log_filters.py  test_bulk_request.json  test_compliance_request.json  test_enum_filter_fix.py  test_flow.py  test_full_compliance.json  test_full_compliance_new.csv.b64  test_full_compliance_new.json  test_full_compliance_updated.json  (+6 more)
alembic/: env.py
alembic/versions/: 20260410_0001_initial_schema.py  20260413_0002_full_mvp_schema.py  20260414_0003_payment_checklist_binding.py  20260414_0004_manager_schema_alignment.py  20260415_0005_remove_unused_tables.py  20260415_0006_remove_unused_columns.py  20260415_0007_enum_to_code_transition.py  20260415_0008_translation_consolidation.py  20260415_0009_text_to_translations.py  20260415_0010_consolidate_report_tables.py  20260415_0011_question_hierarchy.py  20260415_0012_question_user_note.py  (+61 more)
app/: celery_app.py  main.py
legal_docs/: AuditReady_Cookie_Policy.html  AuditReady_Privacy_Policy.html  AuditReady_Terms_of_Service.html  AuditReady_Terms_of_Service_en.html
scripts/: backfill_answer_option_descriptions_cs.py  backfill_checklist_translations_cs.py  cleanup_tenantless_customer_data.py  generate_sample_pdf.py  preview_report.py  render_report_mock.py
tests/: conftest.py  test_access.py  test_access_lifecycle.py  test_admin_checklist.py  test_admin_profile_api.py  test_all_apis.py  test_api_generate_pdf.py  test_assessment.py  test_assessment_review.py  test_assessment_validation.py  test_audit_logs.py  test_auth.py  test_bulk_checklist.py  test_cleanup_tenantless_customer_data.py  test_comprehensive_apis.py  test_customer_assessments.py  test_html_sanitizer.py  test_payments.py  test_products_api.py  test_rbac.py  test_rbac_models.py  test_report_section_overviews.py  test_security.py  test_simple.py  test_support_and_password_reset.py
(+142 files in other folders)
