[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checklist-app-api"
version = "0.1.0"
description = "FastAPI backend boilerplate for the checklist app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"alembic==1.18.4",
"annotated-doc==0.0.4",
"annotated-types==0.7.0",
"anyio==4.13.0",
"boto3==1.42.89",
"botocore==1.42.89",
"certifi==2026.2.25",
"cffi==2.0.0",
"charset-normalizer==3.4.7",
"click==8.3.2",
"cryptography==44.0.2",
"dnspython==2.8.0",
"qrcode[pil]==8.2",
"email-validator==2.3.0",
"fastapi==0.135.3",
"greenlet==3.4.0",
"h11==0.16.0",
"httpcore==1.0.9",
"httptools==0.7.1",
"idna==3.11",
"iniconfig==2.3.0",
"jmespath==1.1.0",
"Mako==1.3.10",
"markdown-it-py==4.0.0",
"MarkupSafe==3.0.3",
"mdurl==0.1.2",
"packaging==26.0",
"pillow==12.2.0",
"pluggy==1.6.0",
"psycopg==3.3.3",
"psycopg-binary==3.3.3",
"pycparser==3.0",
"pydantic==2.12.5",
"pydantic-settings==2.13.1",
"pydantic_core==2.41.5",
"Pygments==2.20.0",
"python-dateutil==2.9.0.post0",
"python-dotenv==1.2.2",
"PyYAML==6.0.3",
"qrcode==8.2",
"requests==2.33.1",
"rich==15.0.0",
"s3transfer==0.16.0",
"segno==1.6.6",
"shellingham==1.5.4",
"six==1.17.0",
"SQLAlchemy==2.0.49",
"starlette==1.0.0",
"stripe==12.5.0",
"typer==0.24.1",
"typing-inspection==0.4.2",
"typing_extensions==4.15.0",
"urllib3==2.6.3",
"uvicorn==0.44.0",
"uvloop==0.22.1",
"watchfiles==1.1.1",
"websockets==16.0"]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
  "httpx>=0.28.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
